# MyOpenClaw

./: .gitignore  AGENTS.md  NOTICE  README.md  config.yaml  pyproject.toml
agents/Pickle/: AGENT.md
docs/: agent-tools-current-status-and-issues.md  architecture.md  strict-layering-refactor.md
docs/openviking/: 2026-04-13-openviking-current-understanding.md
docs/superpowers/: 2026-04-04-context-observability-findings.md
examples/openviking_sdk/: README.md  smoke_test.py
explore/: README.md
scripts/: check_layer_dependencies.py  lint.py
skills/screen-capturer/: SKILL.md
src/myopenclaw/: __init__.py
tests/: __init__.py  test_agent_factory.py  test_agent_session.py  test_agent_spec_loader.py  test_agent_spec_resolver.py  test_cli_chat.py  test_config.py  test_packaging.py  test_provider_factory.py  test_session_state.py
tests/agent/: test_events.py  test_runtime.py  test_session_factory.py
tests/agents/: test_behavior_loader.py  test_skills.py
tests/app/: test_assembly.py  test_behavior_loader.py
tests/cli/: __init__.py  test_chat_loop.py  test_main_sessions.py
tests/config/: test_app_config.py
tests/context/: test_session_recall.py
tests/conversation/: __init__.py  test_session.py
tests/conversations/: test_session.py  test_session_preview.py  test_session_service.py  test_session_storage_mapper.py
tests/lint/: test_layer_dependencies.py
tests/llm/: test_chat_types_removal.py
tests/persistence/: test_sqlite_session_repository.py
tests/providers/: __init__.py  test_anthropic.py  test_chat_types_removal.py  test_gemini.py
(+187 files in other folders)
